@@ -31,10 +31,10 @@ OUTPUT_OPTION = /Fo$@
 # In this place I don't know what I build: library or application.
 # But in real projects only one will be defined---either $(PRGNAME) or
 # $(LIBNAME), so .pdb name will be correct.
-OUTPUT_OPTION_DBG = /Fo$@ /Fd"$(OUTPUT_DIR_DBG)/$(PRGNAME)$(LIBNAME).pdb"
-OUTPUT_OPTION_STATIC_DBG = /Fo$@ /Fd"$(OUTPUT_DIR_A_DBG)/$(PRGNAME)$(LIBNAME).pdb"
-OUTPUT_OPTION_STLDBG = /Fo$@ /Fd"$(OUTPUT_DIR_STLDBG)/$(PRGNAME)$(LIBNAME).pdb"
-OUTPUT_OPTION_STATIC_STLDBG = /Fo$@ /Fd"$(OUTPUT_DIR_A_STLDBG)/$(PRGNAME)$(LIBNAME).pdb"
+OUTPUT_OPTION_DBG = /Fo$@ /Fd$(OUTPUT_DIR_DBG)/$(PRGNAME)$(LIBNAME).pdb
+OUTPUT_OPTION_STATIC_DBG = /Fo$@ /Fd$(OUTPUT_DIR_A_DBG)/$(PRGNAME)$(LIBNAME).pdb
+OUTPUT_OPTION_STLDBG = /Fo$@ /Fd$(OUTPUT_DIR_STLDBG)/$(PRGNAME)$(LIBNAME).pdb
+OUTPUT_OPTION_STATIC_STLDBG = /Fo$@ /Fd$(OUTPUT_DIR_A_STLDBG)/$(PRGNAME)$(LIBNAME).pdb
 LINK_OUTPUT_OPTION = /OUT:$@
 RC_OUTPUT_OPTION = /fo $@
 RC_OUTPUT_OPTION_DBG = /fo $@
