@@ -2,8 +2,8 @@
 MSVC_DIR = c:\Program Files\Microsoft Visual Studio\VC98
 !endif
 
-CFLAGS_COMMON = /nologo /W3 /GR /GX
-CXXFLAGS_COMMON = /nologo /W3 /GR /GX
+CFLAGS_COMMON = /nologo /W4 /GR /GX
+CXXFLAGS_COMMON = /nologo /W4 /GR /GX
 
 !include $(RULESBASE)/$(USE_MAKE)/vc-common.mak
 
