@@ -17,7 +17,7 @@ DEFS_STATIC_DBG = /D_STLP_USE_STATIC_LIB
 DEFS_STATIC_STLDBG = /D_STLP_USE_STATIC_LIB
 !endif
 
-INCLUDES=$(INCLUDES) /I "$(STLPORT_INCLUDE_DIR)" /FI "vc_warning_disable.h"
+INCLUDES=$(INCLUDES) /I$(STLPORT_INCLUDE_DIR) /FI vc_warning_disable.h
 
 !ifdef STLP_BUILD_BOOST_PATH
 OPT_DBG = /Zm800
@@ -25,9 +25,9 @@ INCLUDES=$(INCLUDES) /I "$(STLP_BUILD_BOOST_PATH)"
 !endif
 
 LDSEARCH=$(LDSEARCH) /LIBPATH:$(STLPORT_LIB_DIR)
-RC_FLAGS_REL = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
-RC_FLAGS_DBG = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
-RC_FLAGS_STLDBG = /I "$(STLPORT_INCLUDE_DIR)" /D "COMP=$(COMPILER_NAME)"
+RC_FLAGS_REL = /I$(STLPORT_INCLUDE_DIR) /D "COMP=$(COMPILER_NAME)"
+RC_FLAGS_DBG = /I$(STLPORT_INCLUDE_DIR) /D "COMP=$(COMPILER_NAME)"
+RC_FLAGS_STLDBG = /I$(STLPORT_INCLUDE_DIR) /D "COMP=$(COMPILER_NAME)"
 OPT_STLDBG = /Zm800
 
 !include $(SRCROOT)/Makefiles/nmake/top.mak
