@@ -6,7 +6,7 @@ STLPORT_DIR=../../..
 
 !include Makefile.inc
 
-INCLUDES=$(INCLUDES) /I "$(STLPORT_INCLUDE_DIR)"
+INCLUDES=$(INCLUDES) /I$(STLPORT_INCLUDE_DIR) /I$(STLPORT_DIR)/src /FI vc_warning_disable.h
 
 !ifdef STLP_BUILD_BOOST_PATH
 INCLUDES=$(INCLUDES) /I "$(STLP_BUILD_BOOST_PATH)"
