@@ -1,31 +1,35 @@
-// vc_warning_disable.h
-#if 1 //(_MSC_VER < 1310)
-#  pragma warning( disable : 4786 ) // identifier truncated to 255 characters
-#  pragma warning( disable : 4244 ) // implicit conversion: possible loss of data
-#  pragma warning( disable : 4800 ) // forcing value to bool 'true' or 'false' (performance warning)
-#  pragma warning( disable : 4189 ) // local variable is initialized but not referenced
-#  pragma warning( disable : 4100 ) // unreferenced formal parameter
-#  pragma warning( disable : 4245 ) // conversion from 'const int' to 'unsigned long', signed/unsigned mismatch
-#  pragma warning( disable : 4660 ) // template-class specialization 'basic_filebuf<char,class _STLD::char_traits<char> >' is already instantiated
-#  pragma warning( disable : 4701 ) // local variable 'base' may be used without having been initialized
-#  pragma warning( disable : 4075 ) // initializers put in unrecognized initialization area
-#  pragma warning( disable : 4673 ) // throwing class with private base class
-#  pragma warning( disable : 4670 ) // throwing class with private base class
+#if (_MSC_VER < 1200)
 #  pragma warning( disable : 4018 ) // signed/unsigned mismatch
-#  pragma warning( disable : 4505 ) // unreferenced local function has been removed
-#  pragma warning( disable : 4146 ) // unary minus applied to unsigned type
-#  pragma warning( disable : 4244 ) // arithmetic conversion - possible loss of data
 #  pragma warning( disable : 4290 ) // c++ exception specification ignored
+#  pragma warning( disable : 4389 ) // '==' : signed/unsigned mismatch
+#  pragma warning( disable : 4610 ) // struct '...' can never be instantiated - user defined constructor required
+#endif
 
-// dwa 1/28/00 - actually I think this may indicate real bugs. We should look
-// into these
-#  pragma warning( disable : 4018 ) // signed/unsigned mismatch
+#if (_MSC_VER <= 1310)
+#  pragma warning( disable : 4097 ) // typedef-name used as based class of (...)
 #  pragma warning( disable : 4251 ) // DLL interface needed
 #  pragma warning( disable : 4284 ) // for -> operator
+#  pragma warning( disable : 4511 ) // copy constructor cannot be generated
+#  pragma warning( disable : 4514 ) // unreferenced inline function has been removed
+#  pragma warning( disable : 4660 ) // template-class specialization '...' is already instantiated
+#  pragma warning( disable : 4701 ) // local variable 'base' may be used without having been initialized
+#  pragma warning( disable : 4710 ) // function (...) not inlined
+#  pragma warning( disable : 4786 ) // identifier truncated to 255 characters
 #endif
 
+#pragma warning( disable : 4075 ) // initializers put in unrecognized initialization area
+//This warning is disable only for the c_locale_win32.c file compilation:
+#pragma warning( disable : 4100 ) // unreferenced formal parameter
+#pragma warning( disable : 4127 ) // conditional expression is constant
+#pragma warning( disable : 4146 ) // unary minus applied to unsigned type
+//This warning is due to the fact that Windows supports 64 bits file size (files
+//higher than 4Go but STLport do not support it yet.
+#pragma warning( disable : 4244 ) // implicit conversion: possible loss of data
+#pragma warning( disable : 4245 ) // conversion from 'enum ' to 'unsigned int', signed/unsigned mismatch
+#pragma warning( disable : 4512 ) // assignment operator could not be generated
+#pragma warning( disable : 4571 ) // catch(...) blocks compiled with /EHs do not catch or re-throw Structured Exceptions
+#pragma warning( disable : 4702 ) // unreachable code (appears in release with warning level4)
+
 // dums: This warning, signaling deprecated C functions like strncpy,
-// will have to be restore one day:
-#if (_MSC_VER >= 1400)
-#  pragma warning( disable : 4996 )
-#endif
+// will have to be fixed one day:
+#pragma warning( disable : 4996 )
